--- a/css/styles.css
+++ b/css/styles.css
@@ -40,8 +40,9 @@ body {
 
 .nav a {
   color: var(--title-text-color);
+  font-weight: 500;
   font-size: 14px;
-  line-height: 0.9;
+  line-height: 1.14;
   letter-spacing: 0.02em;
 }
 
@@ -56,10 +57,10 @@ body {
 
 .addres a {
   color: var(--primary-text-color);
+  font-weight: 500;
   font-size: 14px;
-  line-height: 0.9;
+  line-height: 1.14;
   letter-spacing: 0.02em;
-  font-style: normal;
 }
 
 .addres a:hover,
@@ -81,6 +82,7 @@ body {
 .hero button {
   background-color: var(--accent-color);
   color: var(--accent-white-color);
+  font-weight: 700;
   font-size: 16px;
   line-height: 1.9;
   display: flex;
@@ -92,7 +94,7 @@ body {
 
 .advantages .title {
   color: var(--title-text-color);
-  font-weight: 900;
+  font-weight: 700;
   font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.03em;
@@ -137,7 +139,7 @@ body {
 
 .team .name {
   color: var(--title-text-color);
-  font-weight: 700;
+  font-weight: 500;
   font-size: 16px;
   line-height: 1.2;
   text-align: center;
@@ -146,10 +148,10 @@ body {
 
 .team .name + p {
   color: var(--primary-text-color);
-  line-height: 19px;
+  font-size: 16px;
+  line-height: 1.9;
   text-align: center;
   letter-spacing: 0.03em;
-  font-size: 16px;
 }
 
 .subtitle .customer:hover,
@@ -163,6 +165,7 @@ footer {
 
 footer .title {
   color: var(--accent-white-color);
+  font-weight: 700;
   line-height: 1.14;
   letter-spacing: 0.03em;
   text-transform: uppercase;
@@ -179,6 +182,7 @@ footer .link {
 
 address span {
   color: var(--accent-white-color);
+  font-style: normal;
   font-size: 14px;
   line-height: 1.7;
   letter-spacing: 0.03em;
@@ -187,6 +191,11 @@ address span {
 .press button {
   background-color: var(--background-pinc-color);
   color: var(--title-text-color);
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.63;
+  text-align: center;
+  letter-spacing: 0.03em;
 }
 
 .press button:hover,
